feat: v1.7.4 – add MetricsHttpServer, TlsConfig, dashboard.html (new files)